<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Editar_Usuario"
    android:background="#279FF5">

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.Material3.CardView.Outlined"
        android:layout_width="352dp"

        android:layout_height="652dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.493"
        app:strokeColor="#043A61"
        app:strokeWidth="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/user_update"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:hint="@string/register_name"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeColor="#1E293B"
                app:hintTextColor="#64748B"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:layout_marginTop="25dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_text_update_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:inputType="text"
                    android:textColor="#0F172A"
                    android:textColorHint="#64748B"
                    android:textSize="14sp"
                    android:textColorLink="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_marginTop="18dp"
                android:hint="@string/register_number"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeColor="#1E293B"
                app:hintTextColor="#64748B"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_text_update_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="#0F172A"
                    android:textColorHint="#64748B"
                    android:textSize="14sp"
                    android:fontFamily="monospace"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_dni"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:hint="@string/register_dni"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeColor="#1E293B"
                app:hintTextColor="#64748B"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_phone"
                android:layout_marginTop="18dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_text_update_dni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:inputType="text"
                    android:textColor="#0F172A"
                    android:textColorHint="#64748B"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_passw"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:hint="@string/login_ph_password"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeColor="#1E293B"
                app:endIconMode="password_toggle"
                app:hintTextColor="#64748B"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_dni"
                android:layout_marginTop="18dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_text_update_passw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:inputType="textPassword"
                    android:textColor="#0F172A"
                    android:textColorHint="#64748B"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_confPassw"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_marginTop="18dp"
                android:hint="@string/register_confPassw"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeColor="#1E293B"
                app:endIconMode="password_toggle"
                app:hintTextColor="#64748B"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_passw">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_text_update_confPassw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="#0F172A"
                    android:textColorHint="#64748B"
                    android:textSize="14sp"
                    android:fontFamily="monospace"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/id_bt_update_user"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="35dp"
                android:text="@string/user_update_user"
                android:textAllCaps="true"
                android:textColor="#1E293B"
                android:textSize="16sp"
                app:cornerRadius="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_confPassw"
                app:strokeColor="#1E293B"
                app:strokeWidth="2dp"
                android:onClick="actualizarUsuario"
                app:icon="@drawable/icon_editar"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:iconSize="23dp"
                app:iconTint="@color/black"
                android:textStyle="bold"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/id_bt_update_cancel"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="8dp"
                android:onClick="cancelarActualizacion"
                android:text="@string/bt_canceled"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:backgroundTint="#043A61"
                app:cornerRadius="29dp"
                app:elevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_bt_update_user"
                android:layout_marginTop="10dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>