<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="#279FF5">

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.Material3.CardView.Outlined"
        android:layout_width="352dp"

        android:layout_height="652dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.493"
        app:strokeColor="#043A61"
        app:strokeWidth="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="16dp">

            <TextView
                android:id="@+id/idResultReg"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:fontFamily="monospace"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_bt_login" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/id_bt_login"
                android:layout_width="200dp"
                android:layout_height="58dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="25dp"
                android:fontFamily="monospace"
                android:onClick="iniciarAplicacion"
                android:text="@string/bt_accept"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:backgroundTint="#043A61"
                app:cornerRadius="29dp"
                app:elevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_passw" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/id_bt_registarse"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:onClick="irPagRegistro"
                android:text="@string/login_register"
                android:textAllCaps="true"
                android:textColor="#1E293B"
                android:textSize="18sp"
                app:cornerRadius="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idResultReg"
                app:strokeColor="#1E293B"
                app:strokeWidth="2dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_usuario"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:hint="@string/login_ph_email"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeColor="#1E293B"
                app:hintTextColor="#64748B"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_text_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="#0F172A"
                    android:textColorHint="#64748B"
                    android:textSize="14sp"
                    android:fontFamily="monospace"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_passw"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:hint="@string/login_ph_password"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeColor="#1E293B"
                app:hintTextColor="#64748B"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_usuario"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_text_login_passw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="#0F172A"
                    android:textColorHint="#64748B"
                    android:textSize="14sp"
                    android:fontFamily="monospace"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="252dp"
                android:layout_height="223dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/logo_2" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>